# pdm-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_exploration_and_shap.ipynb  02_failure_signatures.ipynb  03_drift_monitoring.ipynb
src/pdm/: __init__.py  config.py  data.py  drift.py  evaluate.py  explain.py  model.py  pipeline.py  signatures.py
tests/: test_data.py  test_drift.py  test_signatures.py
