[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdm"
version = "0.1.0"
description = "Explainable predictive maintenance on C-MAPSS turbofan data (XGBoost + SHAP)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
# Evidently is optional: the hand-built PSI/KS core needs only scipy; the
# evidently_report() wrapper needs this. Kept separate so CI stays lean/fast.
evidently = ["evidently>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
